# vukixxx

./: .env.example  .gitignore  ANALIZA-TRENUTNO-STANJE.md  BUDUCNOST.md  EXTENSION-CLASSIFICATION-PROMPT.md  INSTALACIJA.md  KORISNICKO-UPUTSTVO.md  NewPivot  README.md  VODIC.md  VukixxExtension-master-prompt.md  Vukixxx-arhitecture.md  create-ico.cjs  firestore.indexes.json  generate-icons.js  index.html  package-lock.json  package.json  save-widget.html  skalabilnostPlan.md  tsconfig.json  vite.config.js  widget.html
.claude/: settings.local.json
.claude/plans/: phase4-animations-ux-polish.md
src/: App.jsx  App.tsx  index.css  main.tsx  polyfills.ts  prd.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  mod.rs  settings.rs  watcher.rs
src-tauri/src/mcp/: server.rs  tools.rs
src/hooks/: useErrorHandler.ts  usePromptLoader.ts  useToast.js
src/lib/: hooks.js  packImportExport.ts  promptParser.ts  tauriSetup.ts  three-webgpu-stub.js  toonConverter.js  toonConverter.ts
src/prompts/: FIREBASE-SETUP.md  IDEAS.md  IDEJE-RAZVOJ.md  QUICK-REFERENCE.md  VUKIXXX-DESIGN-SYSTEM-PROMPT.md  VukixxExtension-FIREBASE-VERSION.md  backend-api.md  context-platform.md  context-system.md  design-component.md  design-hero.md  marketing-landing.md  marketing-seo.md  master.md
src/services/: claudeMdGenerator.ts  (+2 more)
vukixx-mcp/: .env.example  DISPATCH_SYSTEM_PROMPT.md  README.md  package-lock.json  package.json  setup-autostart.bat  start-mcp.bat  tsconfig.json
(+100 files in other folders)
