[package]
name = "vukixxx"
version = "1.0.0"
description = "Vukixxx - AI Context Workbench"
authors = ["Vukixxx"]
edition = "2021"

[lib]
name = "vukixxx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
